src/test/deca/context/valid/sansObj/assign-compatible-float-float.deca
// Description:
//    Affectation de deux float entre eux
//
// Résultat:
//    Succès
//
{
   float a;
   float b;

   // Doit etre accepté.
   a = b;
}